--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -104,6 +104,7 @@ body{
         }
         .timeline-item{
             top:-2rem;
+            min-height: 15rem;
             position: relative;
             padding: 2rem;
             border:.1rem solid #e4f2ff;
