--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -4,6 +4,9 @@ html,
 body{
     padding: 0;
     margin: 0;
+    // width: 100vw;
+    // overflow-x: hidden;
+    // overflow-y: auto;
     // font-family: 'Roboto', sans-serif;
     font-family: 'Quicksand', sans-serif;
         header{
