--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -4,9 +4,10 @@ html,
 body{
     padding: 0;
     margin: 0;
-    // width: 100vw;
-    // overflow-x: hidden;
-    // overflow-y: auto;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
     font-family: 'Roboto', sans-serif;
     // font-family: 'Quicksand', sans-serif;
         header{
@@ -145,4 +146,7 @@ h1,h2,h3,h4,
 }
 .form-control{
     padding:.6rem 0rem;
+}
+.main-section{
+    flex:1 0 0;
 }
