--- a/public/plugins/user-account/src/templates/forms/signed-out.html
+++ b/public/plugins/user-account/src/templates/forms/signed-out.html
@@ -3,7 +3,7 @@
       <h1 class="font-weight-normal thin"> See you again soon</h1>
       <p class="lead"></p>
       <p>
-        <a class="user-account-div__sign-in-link" href="#">sign in as again</a>
+        <a class="user-account-div__sign-in-link" href="#">sign in again</a>
       </p>
 
 
