--- a/public/plugins/user-account/src/templates/forms/signed-out.html
+++ b/public/plugins/user-account/src/templates/forms/signed-out.html
@@ -1,7 +1,6 @@
 <form id="signed-out" style="display:none;" action="/plugins/form-wizard">
     <div class="form-header">
-      <h1 class="font-weight-normal thin"> See you again soon</h1>
-      <p class="lead"></p>
+      <p class="lead"> You have successfully signed out. <br/> <small>See you again soon</small></p>
       <p>
         <a class="user-account-div__sign-in-link" href="#">sign in again</a>
       </p>
