--- a/public/plugins/form-wizard/src/styles/_wizard-styles.scss
+++ b/public/plugins/form-wizard/src/styles/_wizard-styles.scss
@@ -33,7 +33,7 @@
         justify-content: center;
       &.active {
         font-weight: bold;
-        background: rgba(#0099cc, 0.2);
+        // background: rgba(#0099cc, 1);
         color: white;
       }
       .checked {
