--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -10,7 +10,7 @@ body{
     overflow-y: auto;
     font-family: 'Roboto', sans-serif;
     // font-family: 'Quicksand', sans-serif;
-        header{
+        #main-header{
             padding: 2rem 0;
             background: #dae8ed;
             .main-brand,
