--- a/public/plugins/form-wizard/src/templates/steps/step-5-terms.html
+++ b/public/plugins/form-wizard/src/templates/steps/step-5-terms.html
@@ -3,7 +3,7 @@
         Terms and Condition
     </p>
     <p class="lead">
-        Read and accept the terms and condition to continue.
+        Please read and accept the terms and condition to continue.
     </p>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non dictum turpis. Nullam vitae fringilla sapien, in pulvinar lacus. Maecenas imperdiet nec sapien at tempor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In eleifend nisl sem, vitae finibus sem mollis vel. Ut a rutrum mauris, ut pretium lectus. Praesent dapibus, risus ac auctor porta, lorem magna dictum risus, commodo pharetra erat nulla et justo. Pellentesque metus justo, pulvinar vitae mi lobortis, tempor lacinia leo. Sed eu tortor eget nisi finibus venenatis. Aliquam ullamcorper justo sed nisl feugiat efficitur.
@@ -20,7 +20,7 @@
     </p>
 
     <p class="row justify-content-center">
-        <button class="btn col-12 col-md-6 col-xl-4 btn-primary btn-lg wiz-continue ">I agree, continue</button>
+        <i id="agree-and-checkout"></i>
         <button class="btn col-12 col-md-6 col-xl-4 btn-secondary wiz-back">I don't agree</button>
     </p>
 </div>
