--- a/public/plugins/form-wizard/src/templates/steps/step-6-complete.html
+++ b/public/plugins/form-wizard/src/templates/steps/step-6-complete.html
@@ -1,11 +1,14 @@
 <div id="finish" class="wizard-step-content">
-        <div class="row">
-            <div class="col-12">
-                <p class="section-heading display-4 pt-4">Finished</p>
-                <br />
+    <div class="row">
+        <div class="col-12" id="finish-text">
+            <p class="section-heading display-4 pt-4">All done! Thank's for choosing our service.</p>
+            <br />
 
-                <h3 class="">Thank you for choosing our service ...</h3>
-            </div>
+            <h3 class="">Here is what we happen next:</h3>
+            <p>You will be contacted in the next hour, using the preferred contact information you provided earlier to get more
+                detail and specifics of your business needs. At the same time, we will work with you to register your domain
+                name or configure your existing one if you have already purchased one.
+            </p>
         </div>
     </div>
-    
+</div>
