--- a/public/plugins/form-wizard/src/templates/steps/step-1-business-info.html
+++ b/public/plugins/form-wizard/src/templates/steps/step-1-business-info.html
@@ -1,6 +1,6 @@
 <div id="basic-info" class="wizard-step-content active">
         <div class="step-header text-center">
-            <h3>Tell us about your business</h3>
+            <h3 id="basic-info-title" > Tell us about your business</h3>
             <br />
         </div>
         <div class="row justify-content-center ">
