--- a/public/plugins/user-account/src/templates/forms/sign-in.html
+++ b/public/plugins/user-account/src/templates/forms/sign-in.html
@@ -2,7 +2,7 @@
     <div class="form-header">
       <h3><i class="fa fa-lock"></i> Sign In</h3>
     </div>
-    <p>We just need some information so we can get you started</p>
+    <p>We value security. Please sign in below so we can be sure it's you.</p>
     <br />
     <!-- Form log in -->
     <div class="md-form">
