--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -290,6 +290,7 @@ body{
     position: fixed;
     width:100%;
     height:100%;
+    top:0;
     z-index: 2000000;
     background: rgba(#ffffff, 0.95);
     .wrapper{
